--- a/estilos/perguntasVerde.css
+++ b/estilos/perguntasVerde.css
@@ -6,18 +6,19 @@
 
 .pergunta {
     font-family: var(---fonte-segundaria);
+    width: 590px;
+    padding: 5px;
 }
 
-.lista-opcoes {
+#div-opcoes {
     display: flex;
     flex-direction: column;
-    padding: 15px;
 }
 
 .opcoes {
     list-style: none;
     padding: 10px 10px 10px 25px;
-    margin: 15px;
+    margin: 10px;
     border: 2px solid var(---verde-claro);
     border-radius: 5px;
     width: 460px;
@@ -28,21 +29,28 @@
 
 .opcoes:hover {
     border-color: var(---verde-escuro);
-    text-align: center;
     transition: .2s;
 }
 
-.btn-proximo{
-    text-decoration: none;
-    border: 2px solid var(---verde-escuro);
-    padding: 10px 15px;
-    border-radius: 10px;
-    color: var(---verde-escuro);
-   
+button.correta {
+    background-color :blueviolet;
+    color: white;
 }
 
-.btn-proximo:hover {
-    background-color: var(---verde-escuro);
+button.incorreta {
+    background-color: brown;
     color: white;
-    border: none;
+}
+
+#mensagem {
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+#mensagem.erro{
+    color: red;
+}
+
+#mensagem.acerto {
+    color: green;
 }
