--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,8 +7,7 @@
     ---fonte-principal: "Boogaloo", serif;
     ---fonte-segundaria: "Brawler", serif;
 
-    ---cor-de-fundo:#d38c73a8;
-    /*#F6EEC9;*/
+    ---cor-de-fundo:#F6EEC9;
     ---vermelho: #FF0000;
     ---vermelho-medio: #EE4E4E;
     ---vermelho-claro: #FFA27F;
