--- a/estilos/estilosPerguntas.css
+++ b/estilos/estilosPerguntas.css
@@ -1,5 +1,11 @@
 @import url(style.css);
 
+.card-perguntas {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .titulo {
   font-size: 55px;
 }
@@ -19,12 +25,6 @@
 #div-opcoes {
   display: flex;
   flex-direction: column;
-}
-
-.lista-opcoes {
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
 }
 
 .opcoes {
@@ -100,9 +100,8 @@ button.incorreta {
 }
 
 
-
 /*MOBILE*/
-@media (max-width: 580px) {
+@media (max-width: 768px) {
 .pergunta {
   width: 80vw;
   margin: 0 6px;
@@ -121,6 +120,10 @@ button.incorreta {
 #mensagem.acerto {
   max-width: 350px;
   text-align: center;
+}
+
+.rodape {
+  display: none;
 }
 
 }
