--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,9 +5,9 @@
 /*--- Variaveis---*/
 :root {
     --fonte-principal: "Boogaloo", serif;
-    --fonte-segundaria: "Brawler", serif;
+    --fonte-secundaria: "Brawler", serif;
 
-    ---cor-de-fundo:#fffaf0;
+    --cor-de-fundo:#fffaf0;
     --vermelho: #FF0000;
     --vermelho-medio: #EE4E4E;
     --vermelho-claro: #FFA27F;
@@ -24,19 +24,41 @@
     --texto-principal: #1f2937;
 }
 
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+
 body {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: var(---cor-de-fundo);
+  min-height: 100vh;
+  background-color: var(--bg-pagina);
+  font-family: var(--fonte-secundaria);
+}
+
+/* FUNDO GERAL*/
+.page-bg {
+  min-height: 92vh;
+  background-color: var(--cor-de-fundo);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 20px;
+  position: relative;
+  overflow: hidden;
+}
+
+/* CARD CENTRAL  */
+.page-card {
+  background-color: var(--bg-card);
+  border-radius: 22px;
+  box-shadow: 0 25px 50px rgba(0,0,0,0.08);
+  padding: 40px;
+  max-width: 1100px;
+  width: 100%;
+  position: relative;
+  z-index: 1;
 }
 
 .titulo {
@@ -55,3 +77,38 @@ body {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+/*---RODAPE---*/
+.rodape {
+  padding: 20px 20px;
+  text-align: center;
+  font-size: 13px;
+  color: var(--texto-principal);
+  opacity: 0.7;
+}
+
+.rodape a {
+  text-decoration: none;
+  color: var(--texto-principal);
+}
+
+.rodape a:hover {
+  color: var(--btn-border);
+}
+
+/*MOBILE*/
+@media (max-width: 580px) {
+    body {
+      overflow: hidden;
+    }
+
+    .page-bg {
+      padding: 10px;
+    }
+
+    .rodape {
+      padding: 12px 20px;
+    }
+
+}
+
